--- a/css/style.scss
+++ b/css/style.scss
@@ -197,6 +197,9 @@ header {
   width: 210px;
   background-color: white;
   border-radius: 3px;
+  a  {
+    color: black;
+  }
 }
 
 .image-box  {
@@ -234,4 +237,5 @@ header {
   white-space: nowrap;
   text-overflow: ellipsis;
   overflow: hidden;
+  color: black;
 }
