--- a/css/style.css
+++ b/css/style.css
@@ -159,9 +159,11 @@ header ul {
 .image-box {
   width: 210px;
   height: 167px;
-  overflow: hidden; }
+  overflow: hidden;
+  position: relative; }
   .image-box .image {
-    width: 210px; }
+    width: 210px;
+    float: left; }
 
 .prod-box {
   border-left: 1px solid lightgrey;
@@ -191,3 +193,20 @@ header ul {
   content: attr(title);
   position: absolute;
   z-index: -10; }
+
+.heart, .hamburger {
+  display: none;
+  float: right;
+  position: absolute; }
+
+.heart {
+  margin-left: 47px; }
+
+.product:hover .heart {
+  display: inline-block; }
+
+.hamburger {
+  margin-left: 76px; }
+
+.product:hover .hamburger {
+  display: inline-block; }
